--- a/sample/src/main/resources/static/index.html
+++ b/sample/src/main/resources/static/index.html
@@ -88,6 +88,6 @@ table, th, td {
 		src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
 		type="text/javascript"></script>
 
-	<script src="js/script1.js"></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
